--- a/views/weather.pug
+++ b/views/weather.pug
@@ -15,11 +15,12 @@ html(lang="en")
         input(name = "location" value = "location")
         br
         button(type = "submit") Submit! 
-
+        br
+        br
 
 
 
 
         //- Powered by <a href="https://www.weatherapi.com/" title="Free Weather API">WeatherAPI.co
-
+        p brought to you by:
         Base URL: http://api.weatherapi.com/v1
